@startuml

title __LOGIN's Class Diagram__\n

  package e.group.login {
    class LoginActivity {
        {static} - KEY_STATUS : String
        {static} - KEY_MESSAGE : String
        {static} - KEY_FIRST_NAME : String
        {static} - KEY_LAST_NAME : String
        {static} - KEY_USERNAME : String
        {static} - KEY_PASSWORD : String
        {static} - KEY_EMPTY : String
        - etUsername : EditText
        - etPassword : EditText
        - username : String
        - password : String
        - pDialog : ProgressDialog
        - login_url : String
        # onCreate()
        - loadDashboard()
        - displayLoader()
        - login()
        - validateInputs()
    }
  }
  

  package e.group.login {
    class MapsActivity {
        - mMap : GoogleMap
        # onCreate()
        + onMapReady()
        + onMyLocationClick()
        + onMyLocationButtonClick()
    }
  }
  

  package e.group.login {
    class RegisterActivity {
        {static} - KEY_STATUS : String
        {static} - KEY_MESSAGE : String
        {static} - KEY_FIRST_NAME : String
        {static} - KEY_LAST_NAME : String
        {static} - KEY_USERNAME : String
        {static} - KEY_PASSWORD : String
        {static} - KEY_EMAIL : String
        {static} - KEY_DOB : String
        {static} - KEY_EMPTY : String
        - etUsername : EditText
        - etPassword : EditText
        - etConfirmPassword : EditText
        - etFirstName : EditText
        - etLastName : EditText
        - etDoB : EditText
        - etEmail : EditText
        - username : String
        - password : String
        - confirmPassword : String
        - firstName : String
        - lastName : String
        - DoB : String
        - email : String
        - pDialog : ProgressDialog
        - register_url : String
        # onCreate()
        - displayLoader()
        - loadDashboard()
        - registerUser()
        - validateInputs()
    }
  }
  

  package e.group.login {
    class SessionHandler {
        {static} - PREF_NAME : String
        {static} - KEY_USERNAME : String
        {static} - KEY_EXPIRES : String
        {static} - KEY_FIRST_NAME : String
        {static} - KEY_LAST_NAME : String
        {static} - KEY_EMPTY : String
        - mContext : Context
        - mEditor : Editor
        - mPreferences : SharedPreferences
        + SessionHandler()
        + loginUser()
        + isLoggedIn()
        + getUserDetails()
        + logoutUser()
    }
  }
  

  package e.group.login {
    class User {
        ~ username : String
        ~ firstName : String
        ~ lastName : String
        ~ email : String
        ~ DoB : Date
        + setUsername()
        + setEmail()
        + setFirstName()
        + setLastName()
        + setDoB()
        + getUsername()
        + getFirstName()
        + getLastName()
        + getDoB()
        + getEmail()
    }
  }
  

  LoginActivity -up-|> AppCompatActivity
  LoginActivity o-- SessionHandler : session
  HostCallbacks -up-|> FragmentHostCallback
  MapsActivity -up-|> OnMapReadyCallback
  MapsActivity -up-|> OnMyLocationButtonClickListener
  MapsActivity -up-|> OnMyLocationClickListener
  MapsActivity -up-|> FragmentActivity
  HostCallbacks -up-|> FragmentHostCallback
  RegisterActivity -up-|> AppCompatActivity
  RegisterActivity o-- SessionHandler : session
  HostCallbacks -up-|> FragmentHostCallback


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
